--- a/cloud-api/.eslintrc.json
+++ b/cloud-api/.eslintrc.json
@@ -1,13 +1,17 @@
 {
 	"env": {
 		"browser": true,
-		"es2021": true
+		"es2021": true,
+		"node": true
 	},
-	"extends": ["standard","prettier"],
+	"extends": ["standard", "prettier"],
+	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
-		"ecmaVersion": 12,
+		"ecmaVersion": "latest",
 		"sourceType": "module"
 	},
-	"rules": {},
-	"ignorePatterns": ["node_modules/", "dist/", "build/", "coverage/", "test/", "*.d.ts"]
+	"plugins": ["@typescript-eslint", "prettier"],
+	"rules": {
+		"prettier/prettier": "warn"
+	}
 }
