--- a/cloud-api/package.json
+++ b/cloud-api/package.json
@@ -5,18 +5,27 @@
 	"main": "src/index.js",
 	"scripts": {
 		"start": "node ./build/index.js",
+		"start:build": "yarn build && yarn start",
 		"setup": "node ./build/setup.js",
-		"tsc": "rm -rf build && tsc --outDir build"
+		"dev": "ts-node-dev --respawn src/index.ts",
+		"dev:setup": "ts-node-dev src/setup",
+		"build": "rm -rf build && tsc",
+		"postinstall": "husky install",
+		"lint": "eslint './**/*.{js,ts}'",
+		"lint:fix": "yarn lint --fix",
+		"prettier": "prettier --write './**/*.{js,ts}'"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@vscode/vscode-languagedetection": "^1.0.21",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"file-size": "^1.0.0",
 		"file-type": "^17.1.1",
+		"filename2prism": "^3.0.0",
 		"get-folder-size": "^3.1.0",
 		"highlight.js": "^11.5.1",
 		"markdown-it": "^13.0.0",
@@ -32,14 +41,20 @@
 		"@types/mime-types": "^2.1.1",
 		"@types/morgan": "^1.9.3",
 		"@types/node": "^17.0.31",
-		"eslint": "^8.14.0",
+		"@typescript-eslint/eslint-plugin": "^5.27.1",
+		"@typescript-eslint/parser": "^5.27.1",
+		"eslint": "^8.0.1",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-config-standard": "^17.0.0",
-		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-n": "^15.2.0",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-n": "^15.0.0",
+		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.0.0",
+		"husky": "^8.0.1",
+		"lint-staged": "^13.0.1",
 		"nodemon": "^2.0.15",
 		"prettier": "^2.6.2",
+		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.6.4"
 	}
 }
