--- a/cloud-api/tsconfig.json
+++ b/cloud-api/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
-		"target": "ES2022",
-		"module": "commonjs",
+		"module": "CommonJS",
+		"target": "ES6",
 		"outDir": "./build",
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
