--- a/cloud-api/package.json
+++ b/cloud-api/package.json
@@ -40,6 +40,7 @@
 		"@types/node": "^17.0.31",
 		"@typescript-eslint/eslint-plugin": "^5.27.1",
 		"@typescript-eslint/parser": "^5.27.1",
+		"colors": "^1.4.0",
 		"cross-env": "^7.0.3",
 		"eslint": "^8.0.1",
 		"eslint-config-prettier": "^8.5.0",
