Downgraded next version due to an error

--- a/cloud-github/.eslintrc.json
+++ b/cloud-github/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": "next/core-web-vitals"
+	"extends": ["mantine", "plugin:@next/next/recommended", "prettier"],
+	"parserOptions": {
+		"project": "./tsconfig.json"
+	},
+	"rules": {
+		"react/react-in-jsx-scope": "off",
+		"@typescript-eslint/no-unused-vars": "error"
+	}
 }
