--- a/cloud-github/package.json
+++ b/cloud-github/package.json
@@ -1,29 +1,42 @@
 {
-  "name": "github",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@mantine/core": "^4.2.7",
-    "@mantine/hooks": "^4.2.7",
-    "@mantine/next": "^4.2.7",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "redaxios": "^0.5.0"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.39",
-    "@types/react": "18.0.10",
-    "@types/react-dom": "18.0.5",
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
-    "eslint-config-react-app": "^7.0.1",
-    "typescript": "4.7.3"
-  }
+	"name": "github",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"typecheck": "tsc --noEmit",
+		"prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
+		"prettier:write": "prettier --write \"**/*.{ts,tsx}\""
+	},
+	"dependencies": {
+		"@mantine/core": "^4.2.9",
+		"@mantine/hooks": "^4.2.9",
+		"@mantine/next": "^4.2.9",
+		"next": "12.1.4",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"redaxios": "^0.5.0"
+	},
+	"devDependencies": {
+		"@next/eslint-plugin-next": "^12.1.4",
+		"@types/node": "^18.0.0",
+		"@types/react": "17.0.39",
+		"@types/react-dom": "18.0.5",
+		"@typescript-eslint/eslint-plugin": "^5.16.0",
+		"@typescript-eslint/parser": "^5.16.0",
+		"eslint": "^8.11.0",
+		"eslint-config-airbnb": "19.0.4",
+		"eslint-config-airbnb-typescript": "^16.1.4",
+		"eslint-config-mantine": "1.1.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.25.4",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-react": "^7.29.4",
+		"eslint-plugin-react-hooks": "^4.3.0",
+		"prettier": "^2.6.2",
+		"typescript": "4.6.3"
+	}
 }
