--- a/cloud-deno/package.json
+++ b/cloud-deno/package.json
@@ -6,35 +6,29 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"prettier:check": "prettier --check **/*.{ts,tsx}",
+		"prettier:write": "prettier --write **/*.{ts,tsx}"
 	},
 	"dependencies": {
 		"@heroicons/react": "^1.0.6",
-		"@mantine/core": "^4.1.5",
-		"@mantine/hooks": "^4.1.5",
-		"@mantine/next": "^4.1.5",
-		"@reduxjs/toolkit": "^1.8.1",
-		"axios": "^0.27.2",
-		"next": "12.1.5",
-		"next-compose-plugins": "^2.2.1",
-		"next-transpile-modules": "^9.0.0",
-		"react": "18.0.0",
-		"react-dom": "18.0.0",
-		"react-moment": "^1.1.2",
-		"react-redux": "^8.0.1",
-		"react-syntax-highlighter": "^15.5.0"
+		"@reduxjs/toolkit": "^1.8.2",
+		"next": "12.1.6",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-redux": "^8.0.2",
+		"redaxios": "^0.5.0"
 	},
 	"devDependencies": {
-		"@types/node": "17.0.27",
-		"@types/react": "18.0.7",
-		"@types/react-dom": "18.0.0",
-		"@types/react-syntax-highlighter": "^15.5.1",
-		"autoprefixer": "^10.4.5",
-		"eslint": "8.14.0",
-		"eslint-config-next": "12.1.5",
-		"eslint-config-react-app": "^7.0.1",
-		"postcss": "^8.4.12",
-		"tailwindcss": "^3.0.24",
-		"typescript": "^4.7.3"
+		"@types/node": "18.0.0",
+		"@types/react": "18.0.14",
+		"@types/react-dom": "18.0.5",
+		"autoprefixer": "^10.4.7",
+		"eslint": "^8.18.0",
+		"eslint-config-next": "12.1.6",
+		"postcss": "^8.4.14",
+		"prettier": "^2.7.1",
+		"tailwindcss": "^3.1.4",
+		"typescript": "^4.7.4"
 	}
 }
