--- a/cloud-deno/package.json
+++ b/cloud-deno/package.json
@@ -8,7 +8,8 @@
 		"start": "next start",
 		"lint": "next lint",
 		"prettier:check": "prettier --check **/*.{ts,tsx}",
-		"prettier:write": "prettier --write **/*.{ts,tsx}"
+		"prettier:write": "prettier --write **/*.{ts,tsx}",
+		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
 		"@heroicons/react": "^1.0.6",
