--- a/create-home-cloud/package.json
+++ b/create-home-cloud/package.json
@@ -4,7 +4,9 @@
   "description": "Get started with the fullstack home cloud project",
   "main": "lib/index.js",
   "type": "module",
-  "bin": "lib/bin.js",
+  "bin": {
+    "create-home-cloud": "lib/bin.js"
+  },
   "scripts": {
     "clean": "rimraf cloud",
     "dev": "tsc && yarn start",
@@ -35,5 +37,16 @@
     "@types/shelljs": "^0.8.11",
     "rimraf": "3.0.2",
     "typescript": "4.7.4"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/iswilljr/create-home-cloud.git"
+  },
+  "bugs": {
+    "url": "https://github.com/iswilljr/create-home-cloud/issues"
+  },
+  "homepage": "https://github.com/iswilljr/create-home-cloud#readme"
 }
