--- a/create-home-cloud/package.json
+++ b/create-home-cloud/package.json
@@ -24,6 +24,10 @@
   ],
   "author": "iswilljr",
   "license": "ISC",
+	"files": [
+		"lib",
+		"README.md"
+	],
   "dependencies": {
     "chalk": "5.0.1",
     "commander": "9.3.0",
