--- a/cloud-deno/package.json
+++ b/cloud-deno/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@heroicons/react": "^1.0.6",
 		"@reduxjs/toolkit": "^1.8.2",
+		"github-markdown-css": "^5.1.0",
 		"next": "12.1.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
