--- a/cloud-github/package.json
+++ b/cloud-github/package.json
@@ -15,6 +15,7 @@
 		"@mantine/core": "^4.2.9",
 		"@mantine/hooks": "^4.2.9",
 		"@mantine/next": "^4.2.9",
+		"github-markdown-css": "^5.1.0",
 		"next": "12.1.4",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
