--- a/create-home-cloud/package.json
+++ b/create-home-cloud/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-home-cloud",
-  "version": "2.0.2",
+  "version": "2.0.4",
   "description": "Get started with the fullstack home cloud project",
   "main": "lib/index.js",
   "type": "module",
@@ -13,7 +13,8 @@
     "build": "rimraf lib && tsc",
     "watch": "tsc --watch",
     "typecheck": "tsc --noEmit",
-    "start": "node --experimental-modules --es-module-specifier-resolution=node --no-warnings lib/index.js"
+		"test": "node lib/bin.js",
+		"test:build": "yarn build && yarn test"
   },
   "keywords": [
     "create",
