--- a/cloud-api/package.json
+++ b/cloud-api/package.json
@@ -35,6 +35,7 @@
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/file-size": "^1.0.1",
+		"@types/jest": "^28.1.4",
 		"@types/mime-types": "^2.1.1",
 		"@types/morgan": "^1.9.3",
 		"@types/node": "^18.0.0",
