Fix md2html "fetch not defined" bug

--- a/cloud-api/package.json
+++ b/cloud-api/package.json
@@ -12,7 +12,6 @@
 		"tsc": "tsc --noEmit",
 		"build": "rm -rf build && tsc",
 		"build:tsc": "yarn tsc && yarn build",
-		"postinstall": "husky install",
 		"lint": "eslint './**/*.{js,ts}'",
 		"lint:fix": "yarn lint --fix",
 		"prettier": "prettier --write './**/*.{js,ts}'",
@@ -23,6 +22,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^0.27.2",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
@@ -50,9 +50,7 @@
 		"eslint-plugin-n": "^15.0.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.0.0",
-		"husky": "^8.0.1",
 		"jest": "^28.1.1",
-		"lint-staged": "^13.0.1",
 		"prettier": "^2.6.2",
 		"supertest": "^6.2.3",
 		"ts-node-dev": "^2.0.0",
