--- a/cloud-api/.eslintrc.json
+++ b/cloud-api/.eslintrc.json
@@ -14,5 +14,6 @@
 	"plugins": ["@typescript-eslint", "prettier"],
 	"rules": {
 		"prettier/prettier": "warn"
-	}
+	},
+	"ignorePatterns": ["build/*", "node_modules/*"]
 }
