--- a/cloud-github/package.json
+++ b/cloud-github/package.json
@@ -7,9 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"typecheck": "tsc --noEmit",
-		"prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
-		"prettier:write": "prettier --write \"**/*.{ts,tsx}\""
+		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
 		"@mantine/core": "^4.2.9",
@@ -22,22 +20,10 @@
 		"redaxios": "^0.5.0"
 	},
 	"devDependencies": {
-		"@next/eslint-plugin-next": "^12.1.4",
+		"@next/eslint-plugin-next": "^12.2.0",
 		"@types/node": "^18.0.0",
 		"@types/react": "17.0.39",
 		"@types/react-dom": "18.0.5",
-		"@typescript-eslint/eslint-plugin": "^5.16.0",
-		"@typescript-eslint/parser": "^5.16.0",
-		"eslint": "^8.11.0",
-		"eslint-config-airbnb": "19.0.4",
-		"eslint-config-airbnb-typescript": "^16.1.4",
-		"eslint-config-mantine": "1.1.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-import": "^2.25.4",
-		"eslint-plugin-jsx-a11y": "^6.5.1",
-		"eslint-plugin-react": "^7.29.4",
-		"eslint-plugin-react-hooks": "^4.3.0",
-		"prettier": "^2.6.2",
 		"typescript": "4.6.3"
 	}
 }
