--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"lint:fix": "eslint --fix '**/*.{js,jsx,ts,tsx}'"
 	},
 	"devDependencies": {
+		"@next/eslint-plugin-next": "^12.2.0",
 		"@types/node": "^18.0.3",
 		"@types/react": "^18.0.15",
 		"@typescript-eslint/eslint-plugin": "^5.30.5",
