--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -32,13 +32,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16.15.1
-          cache: "yarn"
-      - name: Move to docs directory
-        run: cd cloud-docs
-      - name: Install dependencies
-        run: yarn
       - name: Deploy
-        run: GIT_USER=${{ github.actor }} GIT_PASS={{ github.token }} yarn deploy
+        uses: redkubes/docusaurus-deploy-action@v1
+        with:
+          source-folder: cloud-docs
+          git-user: ${{ github.actor }}
+          git-password: ${{ github.token }}
+          deployment-branch: gh-pages
