--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,4 +1,8 @@
-name: Deploy Docs Site
+name: Deploy Docs Site to GitHub Pages
+
+defaults:
+  run:
+    working-directory: cloud-docs
 
 on:
   push:
@@ -8,8 +12,8 @@ on:
       - "cloud-docs/**/*"
 
 jobs:
-  Lint:
-    name: Lint
+  deploy:
+    name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -17,25 +21,14 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.15.1
+          node-version: 16.5.1
           cache: "yarn"
       - name: Install dependencies
-        run: yarn
-      - name: Lint
-        run: yarn lint
-
-  Deploy:
-    needs: [Lint]
-    name: deploy
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+        run: yarn install --frozen-lockfile
+      - name: Build website
+        run: yarn build
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          fetch-depth: 0
-      - name: Deploy
-        uses: redkubes/docusaurus-deploy-action@v1
-        with:
-          source-folder: cloud-docs
-          git-user: ${{ github.actor }}
-          git-password: ${{ github.token }}
-          deployment-branch: gh-pages
+          github_token: ${{ github.token }}
+          publish_dir: ./build
