docs: add installation guides

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -2,7 +2,7 @@ name: Deploy Docs Site to GitHub Pages
 
 defaults:
   run:
-    working-directory: cloud-docs
+    working-directory: "cloud-docs"
 
 on:
   push:
