renamed folder cloud-docs to website

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -2,14 +2,14 @@ name: Deploy Docs Site to GitHub Pages
 
 defaults:
   run:
-    working-directory: "cloud-docs"
+    working-directory: website
 
 on:
   push:
     branches:
       - master
     paths:
-      - "cloud-docs/**/*"
+      - "website/**/*"
 
 jobs:
   deploy:
