--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -6,22 +6,24 @@ on:
       - master
     paths:
       - ".github/workflows/deploy-docs.yml"
-      - "website/**/*"
+      - "website/**"
 
 jobs:
   deploy:
+    name: Deploy to GitHub Pages
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
     defaults:
       run:
         working-directory: website
-    name: Deploy to GitHub Pages
-    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.15.1
+          node-version: 18
           cache: "yarn"
       - name: Install dependencies
         run: yarn install --frozen-lockfile
@@ -32,3 +34,5 @@ jobs:
         with:
           github_token: ${{ github.token }}
           publish_dir: ./build
+          user_name: github-actions[bot]
+          user_email: 41898282+github-actions[bot]@users.noreply.github.com
