--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -30,7 +30,9 @@ jobs:
           cd website
           yarn install --frozen-lockfile
       - name: Build website
-        run: yarn build
+        run: |
+          cd website
+          yarn build
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
