--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -14,9 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    # defaults:
-    #   run:
-    #     working-directory: website
+    defaults:
+      run:
+        working-directory: website
     steps:
       - uses: actions/checkout@v3
         with:
@@ -26,13 +26,9 @@ jobs:
           node-version: 18
           cache: "yarn"
       - name: Install dependencies
-        run: | 
-          cd website
-          yarn install --frozen-lockfile
+        run: yarn install --frozen-lockfile
       - name: Build website
-        run: |
-          cd website
-          yarn build
+        run: yarn build
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
@@ -40,4 +36,4 @@ jobs:
           publish_dir: ./website/build
           user_name: github-actions[bot]
           user_email: 41898282+github-actions[bot]@users.noreply.github.com
-      - run: ls -a
+      
