--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,8 @@
 	"plugins": ["react-hooks", "@typescript-eslint"],
 	"rules": {
 		"@typescript-eslint/no-explicit-any": "off",
-		"@typescript-eslint/no-var-requires": "off"
+		"@typescript-eslint/no-var-requires": "off",
+		"@typescript-eslint/no-unused-vars": "error"
 		// "@next/next/no-html-link-for-pages": ["error", "cloud-deno/pages"]
 	}
 }
