--- a/cloud-github/package.json
+++ b/cloud-github/package.json
@@ -6,8 +6,7 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint",
-		"typecheck": "tsc --noEmit"
+		"lint": "next lint"
 	},
 	"dependencies": {
 		"@mantine/core": "^4.2.9",
