--- a/cloud-api/package.json
+++ b/cloud-api/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "server",
-  "version": "2.0.0",
+  "name": "cloud-api",
+  "version": "2.0.4",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -22,7 +22,6 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "file-size": "^1.0.0",
-    "get-folder-size": "^3.1.0",
     "mime-types": "^2.1.35",
     "morgan": "^1.10.0"
   },
