--- a/cloud-deno/package.json
+++ b/cloud-deno/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "client-ts",
-  "version": "2.0.0",
+  "name": "cloud-deno",
+  "version": "2.0.4",
   "private": true,
   "scripts": {
     "dev": "next dev",
