--- a/cloud-deno/package.json
+++ b/cloud-deno/package.json
@@ -2,6 +2,7 @@
   "name": "cloud-deno",
   "version": "2.0.4",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
