--- a/cloud-api/package.json
+++ b/cloud-api/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.4",
   "description": "",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "start": "node ./build/index.js",
     "start:build": "yarn build && yarn start",
@@ -10,8 +11,8 @@
     "dev": "ts-node-dev --respawn src/index.ts",
     "dev:setup": "ts-node-dev src/setup",
     "typecheck": "tsc --noEmit",
-    "build": "rm -rf build && tsc --build",
-    "build:tsc": "yarn tsc && yarn build"
+    "build": "rm -rf build && tsc",
+    "build:tsc": "yarn typecheck && yarn build"
   },
   "keywords": [],
   "author": "",
@@ -21,18 +22,19 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "file-size": "^1.0.0",
+    "filesize": "^9.0.11",
     "mime-types": "^2.1.35",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/file-size": "^1.0.1",
+    "@types/inquirer": "^8.2.1",
     "@types/mime-types": "^2.1.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.0",
     "cross-env": "^7.0.3",
+    "inquirer": "^9.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.6.4"
   }
