--- a/cloud-api/tsconfig.json
+++ b/cloud-api/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
-    "target": "ES6",
-    "outDir": "./build",
+    "target": "ES2020",
+    "module": "NodeNext",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "alwaysStrict": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "moduleResolution": "NodeNext",
+    "rootDir": "src",
+    "outDir": "build"
+  },
+  "exclude": ["node_modules"]
 }
