--- a/create-home-cloud/package.json
+++ b/create-home-cloud/package.json
@@ -32,12 +32,12 @@
   "dependencies": {
     "chalk": "5.0.1",
     "commander": "9.3.0",
-    "prompts": "2.4.2",
+    "inquirer": "^9.0.0",
     "shelljs": "0.8.5"
   },
   "devDependencies": {
+    "@types/inquirer": "^8.2.1",
     "@types/node": "18.0.3",
-    "@types/prompts": "2.0.14",
     "@types/shelljs": "^0.8.11",
     "rimraf": "3.0.2",
     "typescript": "4.7.4"
